--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@angular/platform-browser-dynamic": "^6.0.6",
     "@angular/platform-server": "^6.0.6",
     "@angular/router": "^6.0.6",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.7",
     "http-server": "^0.11.1",
     "ie-shim": "^0.1.0",
@@ -140,7 +141,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.0",
     "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.2",
     "npm-run-all": "^4.1.3",
     "optimize-js-plugin": "^0.0.4",
     "parse5": "^5.0.0",
