--- a/package.json
+++ b/package.json
@@ -99,6 +99,8 @@
     "core-js": "^2.5.7",
     "http-server": "^0.11.1",
     "ie-shim": "^0.1.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.1",
     "zone.js": "^0.8.26"
@@ -118,7 +120,9 @@
     "add-asset-html-webpack-plugin": "^2.1.3",
     "angular2-template-loader": "^0.6.2",
     "assets-webpack-plugin": "^3.8.4",
+    "autoprefixer": "^9.1.0",
     "awesome-typescript-loader": "^5.2.0",
+    "bootstrap-loader": "^3.0.0",
     "codelyzer": "^4.3.0",
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.2.0",
@@ -145,11 +149,13 @@
     "npm-run-all": "^4.1.3",
     "optimize-js-plugin": "^0.0.4",
     "parse5": "^5.0.0",
+    "postcss-loader": "^2.1.6",
     "protractor": "^5.3.2",
     "raw-loader": "^0.5.1",
+    "resolve-url-loader": "^2.3.0",
     "rimraf": "^2.6.2",
     "rxjs-tslint": "^0.1.5",
-    "sass-loader": "^7.0.3",
+    "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "^2.0.1",
     "source-map-loader": "^0.2.3",
     "string-replace-loader": "^2.1.1",
